--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -17,11 +17,14 @@ jobs:
 
       - name: Build site directory
         run: |
-          mkdir -p site/data site/assets
+          mkdir -p site/data site/assets site/scripts
           # Generate HTML and reference the stylesheet at `assets/style.css` (relative path on the published site)
           pandoc data-specification.md -o site/index.html --standalone --metadata title="Data specification" --css=assets/style.css
+          pandoc processing_workflow.md -o site/processing_workflow.html --standalone --metadata title="Processing workflow" --css=assets/style.css
           cp -R data/* site/data/
           cp -R assets/* site/assets/
+          # Copy scripts (including requirements) so they are downloadable from the published site
+          cp -R scripts/* site/scripts/
 
       - name: Publish to gh-pages
         uses: peaceiris/actions-gh-pages@v3
