Fix publishing issue

--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -21,6 +21,9 @@ jobs:
           # Generate HTML and reference the stylesheet at `assets/style.css` (relative path on the published site)
           pandoc data-specification.md -o site/index.html --standalone --metadata title="Data specification" --css=assets/style.css
           pandoc processing_workflow.md -o site/processing_workflow.html --standalone --metadata title="Processing workflow" --css=assets/style.css
+          # Copy source markdown files so raw `.md` files are downloadable at the site root
+          cp data-specification.md site/data-specification.md
+          cp processing_workflow.md site/processing_workflow.md
           cp -R data/* site/data/
           cp -R assets/* site/assets/
           # Copy scripts (including requirements) so they are downloadable from the published site
